Implement SegmentRootPageHeaderComponent and SegmentRootPageContentComponent (section card not implemented yet) and Update Segments Page Routing

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-header/segment-root-page-header.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-header/segment-root-page-header.component.html
@@ -1,1 +1,4 @@
-<p>segment-root-page-header works!</p>
+<app-common-root-page-header
+  title="app-header.title.segments"
+  subtitle="segments.subtitle.text">
+</app-common-root-page-header>
