--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-root-page-content.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-root-page-content.component.html
@@ -1,1 +1,3 @@
-<p>segment-root-page-content works!</p>
+<app-common-section-card-list>
+  <app-segment-root-section-card section-card></app-segment-root-section-card>
+</app-common-section-card-list>
