Implement SegmentRootSectionCardComponent (SegmentRootSectionCardTableComponent not implemented yet)

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
@@ -28,7 +28,7 @@
     <mat-menu #menu="matMenu">
       <ng-container *ngFor="let item of menuButtonItems">
         <button *ngIf="!item.disabled" mat-menu-item (click)="onMenuButtonItemClick(item.name)">
-          <span class="ft-14-400">{{ item.name }}</span>
+          <span class="ft-14-400">{{ item.name | translate | titlecase }}</span>
         </button>
       </ng-container>
     </mat-menu>
