--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page.component.html
@@ -1,1 +1,4 @@
-<p>segment-details-page works!</p>
+<app-common-page>
+  <app-segment-details-page-header header></app-segment-details-page-header>
+  <app-segment-details-page-content content></app-segment-details-page-content>
+</app-common-page>
