--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-header/segment-details-page-header.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-header/segment-details-page-header.component.html
@@ -1,1 +1,6 @@
-<p>segment-details-page-header works!</p>
+<app-common-details-page-header
+  rootName="app-header.title.segments"
+  [detailsName]="(selectedSegment$ | async)?.name ?? ''"
+  rootLink="segments"
+>
+</app-common-details-page-header>
