--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-overview-details-section-card/segment-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-overview-details-section-card/segment-overview-details-section-card.component.html
@@ -1,1 +1,31 @@
-<p>segment-overview-details-section-card works!</p>
+<app-common-section-card class="details-overview-card" *ngIf="segment$ | async as segment">
+  <!-- header-left -->
+  <app-common-section-card-title-header
+    header-left
+    [title]="segment.name"
+    [createdAt]="segment.createdAt"
+    [updatedAt]="segment.updatedAt"
+    [chipClass]="segment.status"
+  ></app-common-section-card-title-header>
+
+  <!-- header-right -->
+  <app-common-section-card-action-buttons
+    header-right
+    [showMenuButton]="true"
+    [menuButtonItems]="menuButtonItems$ | async"
+    [isSectionCardExpanded]="isSectionCardExpanded"
+    (menuButtonItemClick)="onMenuButtonItemClick($event, segment)"
+    (sectionCardExpandChange)="onSectionCardExpandChange($event)"
+  ></app-common-section-card-action-buttons>
+
+  <!-- content -->
+  <ng-container content>
+    <app-common-section-card-overview-details
+      [data]="segmentOverviewDetails$ | async"
+      (tagItemClick)="filterSegmentsByChips($event)"
+    ></app-common-section-card-overview-details>
+  </ng-container>
+
+  <!-- footer -->
+  <app-segment-overview-details-footer footer></app-segment-overview-details-footer>
+</app-common-section-card>
