Fix TypeError: Cannot read properties of null

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="options-container dense-2">
-    <button *ngIf="showMenuButton" mat-icon-button [matMenuTriggerFor]="menu" [disabled]="!menuButtonItems.length">
+    <button *ngIf="showMenuButton" mat-icon-button [matMenuTriggerFor]="menu" [disabled]="!(menuButtonItems?.length)">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
