Implement SegmentOverviewDetailsFooterComponent and make the tab change work

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-overview-details-section-card/segment-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-overview-details-section-card/segment-overview-details-section-card.component.html
@@ -27,5 +27,8 @@
   </ng-container>
 
   <!-- footer -->
-  <app-segment-overview-details-footer footer></app-segment-overview-details-footer>
+  <app-segment-overview-details-footer
+    footer
+    (tabChange)="onSelectedTabChange($event)"
+  ></app-segment-overview-details-footer>
 </app-common-section-card>
