--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-overview-details-section-card/segment-overview-details-footer/segment-overview-details-footer.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-overview-details-section-card/segment-overview-details-footer/segment-overview-details-footer.component.html
@@ -1,1 +1,4 @@
-<p>segment-overview-details-footer works!</p>
+<app-common-tabbed-section-card-footer
+  [tabLabels]="tabLabels"
+  (selectedTabChange)="onSelectedTabChange($event)"
+></app-common-tabbed-section-card-footer>
