created ad updated dates for fresh and imported experiments-ff-segments

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
@@ -5,6 +5,7 @@
     [title]="flag.name"
     [createdAt]="flag.createdAt"
     [updatedAt]="flag.updatedAt"
+    [versionNumber]="flag.versionNumber"
     [chipClass]="flag.status"
     [showWarning]="shouldShowWarning$ | async"
   ></app-common-section-card-title-header>
