--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
@@ -54,7 +54,12 @@
         {{ FLAG_TRANSLATION_KEYS.UPDATED_AT | translate }}
       </th>
       <td mat-cell *matCellDef="let flag" class="updated-at-column ft-14-400">
-        {{ flag.updatedAt | date : 'MMM d, y h:mm a' }}
+        <ng-container *ngIf="flag.versionNumber === 1; else displayUpdatedAt">
+          {{ '-' }}
+        </ng-container>
+        <ng-template #displayUpdatedAt>
+          {{ flag.updatedAt | date : 'MMM d, y h:mm a' }}
+        </ng-template>
       </td>
     </ng-container>
 
