--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -59,16 +59,22 @@
         <span class="ft-32-700 experiment-overview-dates">
           <span class="ft-14-700 experiment-overview-create-date">
             {{
-              ('home.view-experiment.created-on.text' | translate) + (experiment.createdAt | formatDate : 'medium date')
+              ('home.view-experiment.created-on.text' | translate) + (experiment.createdAt | formatDate : 'short date')
             }}
           </span>
-
-          <span class="ft-14-700 experiment-overview-last-update-date">
+          <span class="ft-14-700 experiment-overview-last-update-date" *ngIf="experiment.versionNumber === 1; else displayUpdatedAt">
             {{
-              ('home.view-experiment.last-updated-on.text' | translate) +
-                (experiment.updatedAt | formatDate : 'medium date')
+              ('home.view-experiment.last-updated-on.text' | translate) + ' -'
             }}
           </span>
+          <ng-template #displayUpdatedAt>
+            <span class="ft-14-700 experiment-overview-last-update-date">
+              {{
+                ('home.view-experiment.last-updated-on.text' | translate) +
+                  (experiment.updatedAt | formatDate : 'short date')
+              }}
+            </span>
+          </ng-template>
         </span>
 
         <!-- <div class="action-buttons">
