--- a/frontend/projects/upgrade/src/app/features/dashboard/segments-legacy/pages/view-segment/view-segment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments-legacy/pages/view-segment/view-segment.component.html
@@ -56,13 +56,20 @@
         </div>
       </div>
       <span class="ft-14-700 segment-create-date">
-        {{ ('home.view-experiment.created-on.text' | translate) + (segment.createdAt | formatDate : 'medium date') }}
+        {{ ('home.view-experiment.created-on.text' | translate) + (segment.createdAt | formatDate : 'short date') }}
       </span>
-      <span class="ft-14-700 segment-update-date">
+      <span class="ft-14-700 segment-update-date" *ngIf="segment.versionNumber === 1; else displayUpdatedAt">
         {{
-          ('home.view-experiment.last-updated-on.text' | translate) + (segment.updatedAt | formatDate : 'medium date')
+          ('home.view-experiment.last-updated-on.text' | translate) + ' -'
         }}
       </span>
+      <ng-template #displayUpdatedAt>
+        <span class="ft-14-700 segment-update-date">
+          {{
+            ('home.view-experiment.last-updated-on.text' | translate) + (segment.updatedAt | formatDate : 'short date')
+          }}
+        </span>
+      </ng-template>
     </div>
 
     <div class="segment-secondary-info">
