--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.html
@@ -22,13 +22,13 @@
   </div>
 
   <div class="options-container dense-2">
-    <button *ngIf="showMenuButton" mat-icon-button [matMenuTriggerFor]="menu" [disabled]="!(menuButtonItems?.length)">
+    <button *ngIf="showMenuButton" mat-icon-button [matMenuTriggerFor]="menu" [disabled]="!menuButtonItems?.length">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
       <ng-container *ngFor="let item of menuButtonItems">
         <button *ngIf="!item.disabled" mat-menu-item (click)="onMenuButtonItemClick(item.action)">
-          <span class="ft-14-400">{{ item.name | translate | titlecase }}</span>
+          <span class="ft-14-400">{{ item.label | translate | titlecase }}</span>
         </button>
       </ng-container>
     </mat-menu>
