Implement SegmentListsTable Component

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-lists-section-card/segment-lists-table/segment-lists-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-lists-section-card/segment-lists-table/segment-lists-table.component.html
@@ -1,1 +1,10 @@
-<p>segment-lists-table works!</p>
+<div class="table-container">
+  <app-common-details-participant-list-table
+    [tableType]="tableType"
+    [dataSource]="dataSource$ | async"
+    [actionsDisabled]="actionsDisabled"
+    [isLoading]="isLoading$ | async"
+    noDataRowText="segments.details.lists.card.no-data-row.text"
+    (rowAction)="onRowAction($event)"
+  ></app-common-details-participant-list-table>
+</div>
