--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-import-modal/common-import-modal.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-import-modal/common-import-modal.component.html
@@ -90,6 +90,9 @@
             <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
             <mat-row class="expandable-row" *matRowDef="let row; columns: ['expandedDetail']"></mat-row>
           </table>
+          <span class="ft-14-400 validation-message validation-message-padding">{{
+            mixedCompatibilityMessage$ | async | translate
+          }}</span>
         </div>
       </ng-template>
     </ng-container>
